--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "postinstall": "npm run prod"
+        "postinstall": "npm run production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
